--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ sim-*
 bin/
 public/api/generated/
 .cbc
+
+extensions/*/*/xcuserdata/
+extensions/*/*/*/xcuserdata/
+extensions/*/*/*/*/xcuserdata/
+extensions/*/*/*/*/*/xcuserdata/
+extensions/*/*/*/*/*/*/xcuserdata/
+extensions/*/*/*/*/*/*/*/xcuserdata/
+extensions/*/*/generated/
+extensions/*/*/*/generated/
+extensions/*/*/*/*/generated/
+extensions/*/*/*/*/*/generated/
+extensions/*/*/*/*/*/*/generated/
+extensions/*/*/*/*/*/*/*/generated/
+extensions/*/*/build/
+extensions/*/*/*/build/
+extensions/*/*/*/*/build/
+extensions/*/*/*/*/*/build/
+extensions/*/*/*/*/*/*/build/
+extensions/*/*/*/*/*/*/*/build/
+project/iphone/
